# cosmic-ext-applet-timer

./: CLAUDE.md  Cargo.toml  dev-reload.sh  setup.sh
src/: main.rs
