[package]
name = "cosmic-ext-applet-timer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cosmic-ext-applet-timer"
path = "src/main.rs"

[dependencies]
libcosmic = { package = "libcosmic", git = "https://github.com/pop-os/libcosmic", rev = "c52ef976500c270b1f9b5fe488dbe5e153022ad3", features = [
    "applet",
    "wayland",
    "winit",
    "tokio",
] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
dirs = "6"

[profile.release]
opt-level = "s"
lto = true
